CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

Version 1.5.0
-----------------------------------------------------------------------
30 April 2007
+ Added slight error check to Database class
+ Added missing DBPager page listing for pages under the limit
+ Added information to Cache.txt on removing a specific key
+ Added filters.txt documentation
+ Fixed setup's permission help file link.
+ Fixed setup's hardcoded version strings
+ Updated Cache_Lit, Clipboard, Developer Rules, Forms, Known_Errors,
  README, WYSIWYG, Converting_Modules
+ Removed Related.txt
+ Rewrote welcome.php message#

27 April 2007
+ DBPager - rewrote paging code

24 April 2007
+ RFE 1704305 - Split bb encoding out into filters
+ Updated files: conf/text_settings.php

23 April 2007
+ Added logIfError function to Error class

19 April 2007
+ Added a function to Core to return the full package version.

17 April 2007
+ RFE 1639645 - added setRequired function to Form
+ Core - isPosted can now return the number of repeats

16 April 2007
+ Cookie - changed default time to 0 instead of null
+ Editor - moved FORCE_EDITOR variable to config.php. Changed define
           to a defined check with a default of false.
+ Setup - Added FORCE_EDITOR setting

13 April 2007
+ Added utf8_encode to all conversions to try and prevent foreign
  character corruption (Thanks Mabhobs)

12 April 2007
+ Convert Blog, Web Pages - Added parseInput to try and fix foreign
  characters
+ Made default template directory local.
+ Updated setup's config template with new local cache define.


11 April 2007
+ Removed Item include from Init.php, now up to module.
+ Added ENCODE_PARSED_TEXT define to text_settings.php
+ Added ability to prohibit encoding of text during parsing.

6 April 2007
+ Removed imageselect function from Form. Not used.
+ Removed translate functions throughout core.

5 April 2007
+ Added German translation files.